c/src/test/resources/c/mini_bnc/valid/rem.c
int main() {
  int a = (-5)%3;
  ASSERT(a < 0);
  return a;
}
